Update thesis: fix sintax

--- a/doc/riferimenti.bib
+++ b/doc/riferimenti.bib
@@ -1,3 +1,10 @@
+@Misc{CudaRepo2025,
+  author = {Marchionni, Enrico},
+  title  = {3D-CT-projection-cuda},
+  year   = {2025},
+  url    = {https://github.com/EnryMarch10/3D-CT-projection-cuda.git}
+}
+
 @Thesis{Colletta2024,
   author   = {Colletta, Lorenzo},
   title    = {Implementazione Parallela di un Algoritmo di Proiezione Tomografica},
